test/files/neg/bug63.scala
class C[+T] {
  def set(elem: T): Unit = ();
}
